<resources>
    <string name="app_name">Gamebox</string>
    <string name="newgame">New game</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="instructions">Click or long click on the color circles to change their color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tictactoeTitle">Tic Tac Toe</string>
    <string name="appTitle">GameBox</string>
    <string name="login">Login</string>
    <string name="mastermindTitle">Mastermind</string>
    <string name="scores">Scores</string>
    <string name="scoresTitle">Scores</string>
</resources>
