<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/t_mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epita.gamebox.MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="#BBBBBB">

    <TextView
        android:id="@+id/t_t_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/appTitle"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/t_in_player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/t_in_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/t_b_tictactoe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_t_title" />

    <Button
        android:id="@+id/t_b_tictactoe"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/tictactoeTitle"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/t_b_mastermind"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_in_player" />
    <Button

        android:id="@+id/t_b_mastermind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/mastermindTitle"
        android:textAllCaps="false"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="@+id/t_b_tictactoe"
        app:layout_constraintRight_toRightOf="@+id/t_b_tictactoe"
        app:layout_constraintTop_toBottomOf="@id/t_b_tictactoe"
        app:layout_constraintBottom_toTopOf="@+id/t_b_scores"/>
    <Button

        android:id="@+id/t_b_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/scores"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@+id/t_b_tictactoe"
        app:layout_constraintRight_toRightOf="@+id/t_b_tictactoe"
        app:layout_constraintTop_toBottomOf="@id/t_b_mastermind"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
